src/gemfile/lexer.c
/* Generated by re2c 3.1 on Thu Feb 19 16:19:44 2026 */
/*
 * lexer.re -- re2c input for Gemfile lexer
 *
 * Tokenises a restricted subset of Gemfile syntax.
 * Token IDs come from the lemon-generated parser.h.
 *
 * Generate: re2c -o src/gemfile/lexer.c src/gemfile/lexer.re --no-debug-info
 */

#include <string.h>
#include "wow/gemfile/lexer.h"
#include "parser.h"

void wow_lexer_init(struct wow_lexer *lex, const char *buf, int len)
{
    lex->cursor = buf;
    lex->limit  = buf + len;
    lex->marker = buf;
    lex->tok    = buf;
    lex->start  = buf;
    lex->line   = 1;
}

/* ------------------------------------------------------------------ */
/* Helpers for multi-line skip patterns                                */
/* ------------------------------------------------------------------ */

/*
 * skip_git_source_block -- consume a git_source(...) { ... } declaration.
 *
 * Called after the lexer has matched "git_source". Advances the cursor
 * past the entire declaration including its block body.
 *
 * Handles:
 *   git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 *   git_source(:github) do |repo|
 *     "https://github.com/#{repo}"
 *   end
 *   git_source :github do |repo| ... end
 */
static int skip_git_source_block(struct wow_lexer *lex, struct wow_token *token)
{
    const char *p = lex->cursor;
    const char *lim = lex->limit;

    /* Phase 1: skip optional (args) or bare :symbol */
    while (p < lim && (*p == ' ' || *p == '\t'))
        p++;
    if (p < lim && *p == '(') {
        p++;
        while (p < lim && *p != ')')
            p++;
        if (p < lim) p++;  /* skip ')' */
    } else if (p < lim && *p == ':') {
        p++;
        while (p < lim && ((*p >= 'a' && *p <= 'z') || (*p >= 'A' && *p <= 'Z') ||
               (*p >= '0' && *p <= '9') || *p == '_'))
            p++;
    }

    /* Phase 2: skip whitespace to find block opener */
    while (p < lim && (*p == ' ' || *p == '\t'))
        p++;

    if (p < lim && *p == '{') {
        /* Brace block — track depth, skip strings and comments */
        int depth = 1;
        p++;
        while (p < lim && depth > 0) {
            if (*p == '"' || *p == '\'') {
                /* Skip quoted string */
                char q = *p++;
                while (p < lim && *p != q && *p != '\n')
                    p++;
                if (p < lim && *p == q) p++;
                continue;
            }
            if (*p == '#') {
                /* Skip comment to end of line */
                while (p < lim && *p != '\n' && *p != '\0')
                    p++;
                continue;
            }
            if (*p == '{') depth++;
            else if (*p == '}') depth--;
            else if (*p == '\n') lex->line++;
            p++;
        }
    } else if (p + 1 < lim && *p == 'd' && *(p + 1) == 'o' &&
               (p + 2 >= lim || *(p + 2) == ' ' || *(p + 2) == '\n' ||
                *(p + 2) == '\t' || *(p + 2) == '\r' || *(p + 2) == '|')) {
        /* do...end block — scan for matching "end" */
        int depth = 1;
        p += 2;
        while (p < lim && depth > 0) {
            if (*p == '"' || *p == '\'') {
                /* Skip quoted string */
                char q = *p++;
                while (p < lim && *p != q && *p != '\n')
                    p++;
                if (p < lim && *p == q) p++;
                continue;
            }
            if (*p == '#') {
                /* Skip comment to end of line */
                while (p < lim && *p != '\n' && *p != '\0')
                    p++;
                continue;
            }
            if (*p == '\n') lex->line++;
            /* Check for 'end' keyword (word boundary check) */
            if (*p == 'e' && p + 2 < lim && p[1] == 'n' && p[2] == 'd' &&
                (p + 3 >= lim || p[3] == '\n' || p[3] == ' ' || p[3] == '\t' ||
                 p[3] == '\r' || p[3] == '\0')) {
                /* Verify word boundary before 'end' */
                if (p == lex->start || *(p - 1) == '\n' || *(p - 1) == ' ' ||
                    *(p - 1) == '\t') {
                    depth--;
                    if (depth == 0) { p += 3; break; }
                }
            }
            p++;
        }
    } else {
        /* No block found — consume to end of line */
        while (p < lim && *p != '\n' && *p != '\0')
            p++;
    }

    lex->cursor = p;
    token->length = (int)(lex->cursor - lex->tok);
    return GIT_SOURCE;
}

/*
 * skip_block_comment -- skip =begin ... =end block.
 *
 * Called after the lexer has matched "=begin" at column 0.
 * Advances cursor past the matching "=end" line.
 */
static void skip_block_comment(struct wow_lexer *lex)
{
    const char *p = lex->cursor;
    const char *lim = lex->limit;

    /* Skip rest of =begin line */
    while (p < lim && *p != '\n' && *p != '\0')
        p++;
    if (p < lim && *p == '\n') {
        lex->line++;
        p++;
    }

    /* Scan for =end at start of line */
    while (p < lim) {
        if (p + 4 <= lim && p[0] == '=' && p[1] == 'e' &&
            p[2] == 'n' && p[3] == 'd' &&
            (p + 4 >= lim || p[4] == '\n' || p[4] == ' ' ||
             p[4] == '\t' || p[4] == '\r' || p[4] == '\0')) {
            p += 4;
            /* Skip rest of =end line */
            while (p < lim && *p != '\n' && *p != '\0')
                p++;
            if (p < lim && *p == '\n') {
                lex->line++;
                p++;
            }
            break;
        }
        if (*p == '\n') lex->line++;
        p++;
    }

    lex->cursor = p;
}

/*
 * skip_to_do -- consume everything until the `do` keyword.
 *
 * Called after the lexer has matched "install_if". Advances the cursor
 * past all tokens (lambda, braces, strings, etc.) until it finds a
 * word-boundary `do`. Stops just before `do` so the normal lexer
 * emits DO as the next token.
 */
static void skip_to_do(struct wow_lexer *lex)
{
    const char *p = lex->cursor;
    const char *lim = lex->limit;

    while (p < lim) {
        /* Skip whitespace */
        if (*p == ' ' || *p == '\t' || *p == '\r') {
            p++;
            continue;
        }
        if (*p == '\n') {
            lex->line++;
            p++;
            continue;
        }
        /* Skip comments */
        if (*p == '#') {
            while (p < lim && *p != '\n' && *p != '\0')
                p++;
            continue;
        }
        /* Skip strings */
        if (*p == '"' || *p == '\'') {
            char q = *p++;
            while (p < lim && *p != q && *p != '\n')
                p++;
            if (p < lim && *p == q) p++;
            continue;
        }
        /* Skip brace blocks { ... } */
        if (*p == '{') {
            int depth = 1;
            p++;
            while (p < lim && depth > 0) {
                if (*p == '"' || *p == '\'') {
                    char q = *p++;
                    while (p < lim && *p != q && *p != '\n')
                        p++;
                    if (p < lim && *p == q) p++;
                    continue;
                }
                if (*p == '#') {
                    while (p < lim && *p != '\n' && *p != '\0')
                        p++;
                    continue;
                }
                if (*p == '{') depth++;
                else if (*p == '}') depth--;
                else if (*p == '\n') lex->line++;
                p++;
            }
            continue;
        }
        /* Check for 'do' keyword at word boundary */
        if (*p == 'd' && p + 1 < lim && p[1] == 'o' &&
            (p + 2 >= lim || p[2] == ' ' || p[2] == '\n' ||
             p[2] == '\t' || p[2] == '\r' || p[2] == '\0')) {
            /* Verify word boundary before 'do' */
            if (p == lex->start || *(p - 1) == ' ' || *(p - 1) == '\t' ||
                *(p - 1) == '\n' || *(p - 1) == '}') {
                /* Stop before 'do' — let the normal lexer emit DO */
                break;
            }
        }
        p++;
    }

    lex->cursor = p;
}

/* ------------------------------------------------------------------ */
/* Scanner                                                             */
/* ------------------------------------------------------------------ */

int wow_lexer_scan(struct wow_lexer *lex, struct wow_token *token)
{
    for (;;) {
        lex->tok = lex->cursor;
        token->start  = lex->cursor;
        token->line   = lex->line;

        
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	yych = *lex->cursor;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t':
		case '\r':
		case ' ': goto yy4;
		case '\n': goto yy6;
		case '!': goto yy7;
		case '"': goto yy9;
		case '#': goto yy10;
		case '%': goto yy12;
		case '&': goto yy13;
		case '\'': goto yy14;
		case '(': goto yy15;
		case ')': goto yy16;
		case ',': goto yy17;
		case '.': goto yy18;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy19;
		case ':': goto yy21;
		case ';': goto yy22;
		case '<': goto yy23;
		case '=': goto yy25;
		case '>': goto yy27;
		case '?': goto yy29;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'o':
		case 'q':
		case 'v':
		case 'x':
		case 'y':
		case 'z': goto yy30;
		case '[': goto yy33;
		case ']': goto yy34;
		case 'c': goto yy35;
		case 'd': goto yy36;
		case 'e': goto yy37;
		case 'f': goto yy38;
		case 'g': goto yy39;
		case 'i': goto yy40;
		case 'n': goto yy41;
		case 'p': goto yy42;
		case 'r': goto yy43;
		case 's': goto yy44;
		case 't': goto yy45;
		case 'u': goto yy46;
		case 'w': goto yy47;
		case '|': goto yy48;
		default: goto yy2;
	}
yy1:
	++lex->cursor;
	{ token->length = 0; return 0; }
yy2:
	++lex->cursor;
yy3:
	{ token->length = 1; return ERROR; }
yy4:
	yych = *++lex->cursor;
	switch (yych) {
		case '\t':
		case '\r':
		case ' ': goto yy4;
		default: goto yy5;
	}
yy5:
	{ continue; }
yy6:
	++lex->cursor;
	{
                lex->line++;
                token->length = 1;
                return NEWLINE;
            }
yy7:
	yych = *++lex->cursor;
	switch (yych) {
		case '=': goto yy50;
		default: goto yy8;
	}
yy8:
	{ token->length = 1; return BANG; }
yy9:
	yyaccept = 0;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 0x00:
		case '\n': goto yy3;
		default: goto yy52;
	}
yy10:
	yych = *++lex->cursor;
	switch (yych) {
		case 0x00:
		case '\n': goto yy11;
		default: goto yy10;
	}
yy11:
	{ continue; }
yy12:
	yyaccept = 0;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case '(': goto yy55;
		case 'i': goto yy56;
		case 'w': goto yy57;
		default: goto yy3;
	}
yy13:
	yych = *++lex->cursor;
	switch (yych) {
		case '&': goto yy58;
		default: goto yy3;
	}
yy14:
	yyaccept = 0;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 0x00:
		case '\n': goto yy3;
		default: goto yy60;
	}
yy15:
	++lex->cursor;
	{ token->length = 1; return LPAREN; }
yy16:
	++lex->cursor;
	{ token->length = 1; return RPAREN; }
yy17:
	++lex->cursor;
	{ token->length = 1; return COMMA; }
yy18:
	++lex->cursor;
	{ token->length = 1; return DOT; }
yy19:
	yyaccept = 1;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case '.': goto yy62;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy19;
		default: goto yy20;
	}
yy20:
	{
                token->length = (int)(lex->cursor - lex->tok);
                return INTEGER;
            }
yy21:
	yych = *++lex->cursor;
	switch (yych) {
		case ':': goto yy63;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy64;
		default: goto yy3;
	}
yy22:
	++lex->cursor;
	{
                token->length = 1;
                return NEWLINE;
            }
yy23:
	yych = *++lex->cursor;
	switch (yych) {
		case '=': goto yy66;
		default: goto yy24;
	}
yy24:
	{ token->length = 1; return LT; }
yy25:
	yyaccept = 2;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case '=': goto yy67;
		case '>': goto yy68;
		case 'b': goto yy69;
		case '~': goto yy70;
		default: goto yy26;
	}
yy26:
	{ token->length = 1; return ASSIGN; }
yy27:
	yych = *++lex->cursor;
	switch (yych) {
		case '=': goto yy71;
		default: goto yy28;
	}
yy28:
	{ token->length = 1; return GT; }
yy29:
	++lex->cursor;
	{ token->length = 1; return QUESTION; }
yy30:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
yy31:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy30;
		case ':': goto yy72;
		default: goto yy32;
	}
yy32:
	{
                token->length = (int)(lex->cursor - lex->tok);
                return IDENT;
            }
yy33:
	++lex->cursor;
	{ token->length = 1; return LBRACKET; }
yy34:
	++lex->cursor;
	{ token->length = 1; return RBRACKET; }
yy35:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'a': goto yy73;
		default: goto yy31;
	}
yy36:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'e': goto yy74;
		case 'o': goto yy75;
		default: goto yy31;
	}
yy37:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'l': goto yy77;
		case 'n': goto yy78;
		case 'v': goto yy79;
		default: goto yy31;
	}
yy38:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'a': goto yy80;
		default: goto yy31;
	}
yy39:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'e': goto yy81;
		case 'i': goto yy82;
		case 'r': goto yy83;
		default: goto yy31;
	}
yy40:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'f': goto yy84;
		case 'n': goto yy86;
		default: goto yy31;
	}
yy41:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'i': goto yy87;
		default: goto yy31;
	}
yy42:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'a': goto yy88;
		case 'l': goto yy89;
		default: goto yy31;
	}
yy43:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'e': goto yy90;
		case 'u': goto yy91;
		default: goto yy31;
	}
yy44:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'o': goto yy92;
		default: goto yy31;
	}
yy45:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'r': goto yy93;
		default: goto yy31;
	}
yy46:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'n': goto yy94;
		default: goto yy31;
	}
yy47:
	yyaccept = 3;
	yych = *(lex->marker = ++lex->cursor);
	switch (yych) {
		case 'h': goto yy95;
		default: goto yy31;
	}
yy48:
	yych = *++lex->cursor;
	switch (yych) {
		case '|': goto yy96;
		default: goto yy49;
	}
yy49:
	{ token->length = 1; return PIPE; }
yy50:
	++lex->cursor;
	{ token->length = 2; return NEQ; }
yy51:
	yych = *++lex->cursor;
yy52:
	switch (yych) {
		case 0x00:
		case '\n': goto yy53;
		case '"': goto yy54;
		default: goto yy51;
	}
yy53:
	lex->cursor = lex->marker;
	switch (yyaccept) {
		case 0: goto yy3;
		case 1: goto yy20;
		case 2: goto yy26;
		case 3: goto yy32;
		case 4: goto yy76;
		case 5: goto yy85;
		case 6: goto yy108;
		case 7: goto yy111;
		case 8: goto yy115;
		case 9: goto yy117;
		case 10: goto yy121;
		case 11: goto yy137;
		case 12: goto yy139;
		case 13: goto yy142;
		case 14: goto yy150;
		case 15: goto yy155;
		case 16: goto yy158;
		case 17: goto yy161;
		case 18: goto yy164;
		case 19: goto yy167;
		case 20: goto yy172;
		case 21: goto yy184;
		case 22: goto yy188;
		case 23: goto yy191;
		case 24: goto yy193;
		case 25: goto yy196;
		case 26: goto yy201;
		case 27: goto yy206;
		case 28: goto yy211;
		case 29: goto yy214;
		case 30: goto yy216;
		default: goto yy219;
	}
yy54:
	++lex->cursor;
	{
